# v-pragati

./: manage.py  pyproject.toml
incomeslab/: apps.py  forms.py  models.py  table.py  urls.py  views.py
incomeslab/migrations/: 0001_initial.py  0002_initial.py  0003_alter_referral_referral_code.py
incomeslab/templates/incomeslab/: dashboard.html  generate_id_pin.html  generate_id_pin_detail.html  header.html  id_pin_generate_table_view.html  my_profile.html  page_layout.html  sidebar.html  sponser_detail.html
registration/: admin.py  forms.py  models.py  urls.py  views.py
registration/migrations/: 0001_initial.py  0002_alter_idpingenerate_share_price.py
registration/templates/registration/: login.html  signup.html
templates/: base.html
vpragati/: asgi.py  settings.py  urls.py  wsgi.py
